--- a/PhoneBook/Dictionaries/Dictionary1.xaml
+++ b/PhoneBook/Dictionaries/Dictionary1.xaml
@@ -10,4 +10,8 @@
         <Setter Property="Padding" Value="15" />
         <Setter Property="Margin" Value="5" />
     </Style>
+    <Style TargetType="Button">
+        <Setter Property="Width" Value="250"/>
+        <Setter Property="Margin" Value="3"/>
+    </Style>
 </ResourceDictionary>
